unpackaged/main/default/objects/Lameness_Prevalence__c/Lameness_Prevalence__c.object-meta.xml
<CustomObject>
    <label>Lameness Prevalence</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Lameness prevalence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lameness Prevalences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>