unpackaged/main/default/objects/Lameness_Prevalence__c/fields/Date_of_scoring__c.field-meta.xml
<CustomField>
    <fullName>Date_of_scoring__c</fullName>
    <label>Date of scoring</label>
    <type>Date</type>
</CustomField>