unpackaged/main/default/objects/Lameness_Prevalence__c/fields/No_Of_Score_3_cows__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Score_3_cows__c</fullName>
    <label>No Of Score 3 cows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>