unpackaged/main/default/objects/Lameness_Prevalence__c/fields/Percentage_Of_Score_3_cows__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Score_3_cows__c</fullName>
    <label>% Of Score 3 cows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>