unpackaged/main/default/objects/Lameness_Prevalence__c/fields/Total_no_cows_scored__c.field-meta.xml
<CustomField>
    <fullName>Total_no_cows_scored__c</fullName>
    <label>Total no cows scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>