unpackaged/main/default/objects/Lameness_Prevalence__c/fields/WOADairy__c.field-meta.xml
<CustomField>
    <fullName>WOADairy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOADairy</label>
    <referenceTo>WOADairy__c</referenceTo>
    <relationshipLabel>Lameness Prevalences</relationshipLabel>
    <relationshipName>Lameness_Prevalences</relationshipName>
    <type>Lookup</type>
</CustomField>